<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">解密陌生人</string>
    <string name="versionName">version 2.1.6.8</string>
    <string name="authorEmail">neday@bk.ru</string>
    <string name="teamSlogan">小苹果,让生活更简单!</string>
    <string name="ImageViewDescription">TODO</string>
    <string name="login_gender_hint">&#x0020;请点击选择性别&#8230;</string>
    <string name="login_username_hint">&#x0020;请输入用户名&#8230;</string>
    <string name="add_name_hint">&#x0020;请输入昵称&#8230;</string>
    <string name="login_password_hint">&#x0020;请输入密码&#8230;</string>
    <string name="login_email_hint">&#x0020;请重复输入密码&#8230;</string>
    <string name="send_feedback_hint">请在此输入您的反馈&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="send_feedback">发送反馈</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_nickname">昵称 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avatar">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_about">&#x0020;关于</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="update">&#x0020;版本更新</string>
    <string name="logout">&#x0020;退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_gender_null">性别不能为空</string>
    <string name="toast_error_avatar_null">头像不能为默认</string>
    <string name="toast_error_nickname_null">昵称不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">加入黑名单</string>
    <string name="blacklist2">黑名列表</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">&#x0020;添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">&#x0020;巧遇附近</string>
    <string name="robot">&#x0020;小陌机器人</string>
    <string name="near_people_play">开始解密</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="game">比大小</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">发现</string>

</resources>