<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chat" >

    <include
        android:id="@+id/layout_register"
        layout="@layout/include_action_bar" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/base_color_text_white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/versionName"
        android:textColor="@color/base_color_text_gray" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/authorEmail"
        android:textColor="@color/base_color_text_white" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/teamSlogan"
        android:textColor="@color/base_color_text_white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_above="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/ImageViewDescription"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>