<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chat"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_register"
        layout="@layout/include_action_bar" />

    <com.xpple.im.view.RoundImageView
        android:id="@+id/et_avatar"
        style="@style/Smile.ImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_head" />

    <com.xpple.im.view.DeletableEditText
        android:id="@+id/et_gender"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext_account"
        android:clickable="false"
        android:drawableLeft="@drawable/user_sex"
        android:drawableRight="@drawable/user_delete"
        android:editable="false"
        android:ems="10"
        android:hint="@string/login_gender_hint"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:singleLine="true"
        android:textColor="@color/base_color_text_white"
        android:textColorHint="@color/base_color_text_gray" />

    <com.xpple.im.view.DeletableEditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_account"
        android:drawableRight="@drawable/user_delete"
        android:ems="10"
        android:hint="@string/login_username_hint"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:singleLine="true"
        android:textColor="@color/base_color_text_white"
        android:textColorHint="@color/base_color_text_gray" />

    <com.xpple.im.view.DeletableEditText
        android:id="@+id/et_nickname"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_nick"
        android:drawableRight="@drawable/user_delete"
        android:ems="10"
        android:hint="@string/add_name_hint"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:singleLine="true"
        android:textColor="@color/base_color_text_white"
        android:textColorHint="@color/base_color_text_gray" />

    <com.xpple.im.view.DeletableEditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_password"
        android:drawableRight="@drawable/user_delete"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:singleLine="true"
        android:textColor="@color/base_color_text_white"
        android:textColorHint="@color/base_color_text_gray" />

    <com.xpple.im.view.DeletableEditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_password_again"
        android:drawableRight="@drawable/user_delete"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textPassword"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:singleLine="true"
        android:textColor="@color/base_color_text_white"
        android:textColorHint="@color/base_color_text_gray" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="159dp"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/card_bk"
        android:gravity="center"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>