<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res/com.xpple.im"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chat" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo" />

        <com.xpple.im.view.DeletableEditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_edittext_account"
            android:drawableLeft="@drawable/user_account"
            android:drawableRight="@drawable/user_delete"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:singleLine="true"
            android:textColor="@color/base_color_text_white"
            android:textColorHint="@color/base_color_text_gray" >

            <requestFocus />
        </com.xpple.im.view.DeletableEditText>

        <com.xpple.im.view.DeletableEditText
            android:id="@+id/user_password_input"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_edittext_account"
            android:drawableLeft="@drawable/user_password"
            android:drawableRight="@drawable/user_delete"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:singleLine="true"
            android:textColor="@color/base_color_text_white"
            android:textColorHint="@color/base_color_text_gray" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/card_bk"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/register_txt1"
            android:textColor="@color/base_color_text_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/base_color_text_white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>